@@ -7,6 +7,8 @@ Revision history for Perl extension JavaScript::Minifier::XS.
     - optimize whitespace collapsing
     - GH#3 / RT#108682; fix whitespace reduction at end of preserved line
       comment.  Thanks to Dan Goodliffe
+    - GH#6; fix unescaped slash in character set, inside of a regex, with thanks
+      to @faf
 
 0.13      2020-12-30 21:46:29-08:00 America/Vancouver
     - POD cleanups; spelling, SYNOPSIS
